--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AlertBox.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AlertBox.xaml
@@ -69,13 +69,13 @@
                     </Border>
 
                     <Border Background="Black" Grid.Row="3" Grid.Column="0">
-                        <Grid Name="ElavatorMotor1" Background="LightSlateGray" Margin="2,2,2,2">
+                        <Grid Name="ElevatorMotor1" Background="LightSlateGray" Margin="2,2,2,2">
                             <TextBlock Name="Caution7" Text="Elavator Motor #1" TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
 
                     <Border Background="Black" Grid.Row="3" Grid.Column="1">
-                        <Grid Name="ElavatorMotor2" Background="LightSlateGray" Margin="2,2,2,2">
+                        <Grid Name="ElevatorMotor2" Background="LightSlateGray" Margin="2,2,2,2">
                             <TextBlock Name="Caution8" Text="Elavator Motor #2" TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
@@ -129,7 +129,7 @@
                     </Border>
 
                     <Border Background="Black" Grid.Row="6" Grid.Column="1">
-                        <Grid Name="ElavatorEncoder" Background="LightSlateGray" Margin="2,2,2,2">
+                        <Grid Name="ElevatorEncoder" Background="LightSlateGray" Margin="2,2,2,2">
                             <TextBlock Name="Caution17" Text="Elavator Encoder" TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
