--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -13,9 +13,7 @@
         <!--hello world-->
     </Window.Resources>
     <Grid>
-        <Image Source="GreenHill.png" Margin="-10,-50,0,-110">
-            
-        </Image>
+        <Image Source="GreenHill.PNG" Margin="-10,-50,0,-110"/>
         <Grid Width="1366" Height="527">
 
             <local:JoystickWidget x:Name="DriverWidget" Width="300" Height="250"  Margin="10,10,1056,267"/>
@@ -23,7 +21,7 @@
                 <local:AutoSwitchControl x:Name="AutoSwitch" Width="200" Height="75" Margin="315,10,851,442"/>
             <local:JoystickWidget x:Name="SwitchesWidget" Width="300" Height="250"  Margin="10,267,1056,10"/>
             <local:CurrentGauge x:Name="CurrentGaugeWidget" Height="75" Width="200" Margin="520,11,646,441" />
-
+            <local:AudioStuff x:Name="MusicButton" Height="75" Width="150" Margin="730, 10, 436, 441"/>
 
 
         </Grid>
