Finished theme select

--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AudioStuff.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AudioStuff.xaml
@@ -20,7 +20,7 @@
                 DOOM
             </ComboBoxItem>
             <ComboBoxItem Name="Pokemon">
-                Dany DiVito-mon
+                Danny DiVito-mon
             </ComboBoxItem>
         </ComboBox>
     </Grid>
