--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -12,9 +12,8 @@
         AllowsTransparency="True"
         WindowStartupLocation="Manual" Left="0" Top="0">
     <Grid>
-
         <Image Name="ThemeImage" Source="GreenHill.png" Margin="-10,-50,0,-110"/>
-
+        <Image Source="Knuckles.gif"  Margin="912,0,375,435"/>
         <Grid Width="1366" Height="527">
 
             <local:JoystickWidget x:Name="DriverWidget" Width="300" Height="250"  Margin="10,10,1056,267"/>
@@ -22,8 +21,9 @@
             <local:AutoSwitchControl x:Name="AutoSwitch" Width="200" Height="75" Margin="315,10,851,442"/>
             <local:JoystickWidget x:Name="SwitchesWidget" Width="300" Height="250"  Margin="10,267,1056,10"/>
             <local:CurrentGauge x:Name="CurrentGaugeWidget" Height="75" Width="200" Margin="520,11,646,441" />
-            <local:AudioStuff x:Name="ThemeSelector" Height="75" Width="200"/>
-            <cefSharp:ChromiumWebBrowser Name="CameraBrowser" Address="http://10.10.71.91:8081" Margin="320,277,726,10"/>
+            <local:AudioStuff x:Name="ThemeSelector" Height="75" Width="200" Margin="725,10,441,442"/>
+            <local:CameraWindow x:Name="CameraWindow" Height="420" Width="610" Margin="315,97,441,10" />
+            <local:Secret x:Name="TomNoTouch" Height="70" Width="35" Margin="948,10,383,447"/>
         </Grid>
 
     </Grid>
