--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Secret.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Secret.xaml
@@ -7,9 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Button Name="SecretButt" Click="SecretClick" Opacity="0" >
-            
-        </Button>
-            
+        <Button Name="SecretButt" Click="SecretClick" Opacity="0"/>
+
     </Grid>
 </UserControl>
